小数点の実装

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <button class="btn operator">*</button>
           <button class="btn num">0</button>
           <button class="btn num">00</button>
-          <button class="btn num">.</button>
+          <button class="btn dot">.</button>
           <button class="btn operator">/</button>
           <button class="btn ac">AC</button>
           <button class="btn equal">=</button>
